Add friend count when returning user
